tests/baselines/reference/functionCalls(strict=true).errors.txt
functionCalls.ts(8,1): error TS2347: Untyped function calls may not accept type arguments.
functionCalls.ts(9,1): error TS2347: Untyped function calls may not accept type arguments.
functionCalls.ts(10,1): error TS2347: Untyped function calls may not accept type arguments.
functionCalls.ts(18,1): error TS2454: Variable 'subFunc' is used before being assigned.
functionCalls.ts(19,1): error TS2454: Variable 'subFunc' is used before being assigned.
functionCalls.ts(20,1): error TS2454: Variable 'subFunc' is used before being assigned.
functionCalls.ts(25,1): error TS2454: Variable 'subFunc' is used before being assigned.
functionCalls.ts(25,1): error TS2347: Untyped function calls may not accept type arguments.
functionCalls.ts(26,1): error TS2454: Variable 'subFunc' is used before being assigned.
functionCalls.ts(26,1): error TS2347: Untyped function calls may not accept type arguments.
functionCalls.ts(27,1): error TS2454: Variable 'subFunc' is used before being assigned.
functionCalls.ts(27,1): error TS2347: Untyped function calls may not accept type arguments.
functionCalls.ts(32,1): error TS2454: Variable 'func' is used before being assigned.
functionCalls.ts(32,1): error TS2347: Untyped function calls may not accept type arguments.
functionCalls.ts(33,1): error TS2454: Variable 'func' is used before being assigned.
functionCalls.ts(33,1): error TS2347: Untyped function calls may not accept type arguments.
functionCalls.ts(34,1): error TS2454: Variable 'func' is used before being assigned.
functionCalls.ts(34,1): error TS2347: Untyped function calls may not accept type arguments.


==== functionCalls.ts (18 errors) ====
    // Invoke function call on value of type 'any' with no type arguments
    var anyVar: any;
    anyVar(0);
    anyVar('');
    
    // Invoke function call on value of type 'any' with type arguments
    // These should be errors
    anyVar<string>('hello');
    ~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2347: Untyped function calls may not accept type arguments.
    anyVar<number>();
    ~~~~~~~~~~~~~~~~
!!! error TS2347: Untyped function calls may not accept type arguments.
    anyVar<Window>(undefined);
    ~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2347: Untyped function calls may not accept type arguments.
    
    
    // Invoke function call on value of a subtype of Function with no call signatures with no type arguments
    interface SubFunc extends Function {
        prop: number;
    }
    var subFunc: SubFunc;
    subFunc(0);
    ~~~~~~~
!!! error TS2454: Variable 'subFunc' is used before being assigned.
    subFunc('');
    ~~~~~~~
!!! error TS2454: Variable 'subFunc' is used before being assigned.
    subFunc();
    ~~~~~~~
!!! error TS2454: Variable 'subFunc' is used before being assigned.
    
    
    // Invoke function call on value of a subtype of Function with no call signatures with type arguments
    // These should be errors
    subFunc<number>(0);
    ~~~~~~~
!!! error TS2454: Variable 'subFunc' is used before being assigned.
    ~~~~~~~~~~~~~~~~~~
!!! error TS2347: Untyped function calls may not accept type arguments.
    subFunc<string>('');
    ~~~~~~~
!!! error TS2454: Variable 'subFunc' is used before being assigned.
    ~~~~~~~~~~~~~~~~~~~
!!! error TS2347: Untyped function calls may not accept type arguments.
    subFunc<any>();
    ~~~~~~~
!!! error TS2454: Variable 'subFunc' is used before being assigned.
    ~~~~~~~~~~~~~~
!!! error TS2347: Untyped function calls may not accept type arguments.
    
    // Invoke function call on value of type Function with no call signatures with type arguments
    // These should be errors
    var func: Function;
    func<number>(0);
    ~~~~
!!! error TS2454: Variable 'func' is used before being assigned.
    ~~~~~~~~~~~~~~~
!!! error TS2347: Untyped function calls may not accept type arguments.
    func<string>('');
    ~~~~
!!! error TS2454: Variable 'func' is used before being assigned.
    ~~~~~~~~~~~~~~~~
!!! error TS2347: Untyped function calls may not accept type arguments.
    func<any>();
    ~~~~
!!! error TS2454: Variable 'func' is used before being assigned.
    ~~~~~~~~~~~
!!! error TS2347: Untyped function calls may not accept type arguments.
    